Design change in LoginFragment

--- a/app/src/main/res/layout-night/fragment_change_password.xml
+++ b/app/src/main/res/layout-night/fragment_change_password.xml
@@ -78,7 +78,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:hint="@string/enter_your_password"
-                app:endIconMode="clear_text"
+                app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:hint="@string/enter_new_password"
-                app:endIconMode="clear_text"
+                app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:hint="@string/confirm_new_password"
-                app:endIconMode="clear_text"
+                app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
