--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -87,7 +87,7 @@
                 app:boxBackgroundMode="outline"
                 app:boxStrokeColor="@color/appBackgroundColor"
                 app:boxStrokeErrorColor="@color/errorColor"
-                app:endIconMode="clear_text"
+                app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:hintTextColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +115,7 @@
                 app:boxBackgroundMode="outline"
                 app:boxStrokeColor="@color/appBackgroundColor"
                 app:boxStrokeErrorColor="@color/errorColor"
-                app:endIconMode="clear_text"
+                app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:hintTextColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +143,7 @@
                 app:boxBackgroundMode="outline"
                 app:boxStrokeColor="@color/appBackgroundColor"
                 app:boxStrokeErrorColor="@color/errorColor"
-                app:endIconMode="clear_text"
+                app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:hintTextColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
