--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -49,35 +49,57 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etLoginEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorPrimaryText"
                 android:hint="@string/enter_your_email"
-                android:inputType="textEmailAddress"
-                android:textColor="@color/colorPrimaryText"
-                android:textColorHint="@color/colorSecondaryText"
+                android:textColorHint="@color/appBackgroundColor"
+                app:boxBackgroundMode="outline"
+                app:boxStrokeColor="@color/appBackgroundColor"
+                app:boxStrokeErrorColor="@color/errorColor"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/colorPrimary"
+                app:hintTextColor="@color/colorPrimary"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/appBackgroundColor" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etLoginPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="@color/colorPrimaryText"
                 android:hint="@string/enter_your_password"
-                android:inputType="textPassword"
-                android:textColor="@color/colorPrimaryText"
-                android:textColorHint="@color/colorSecondaryText"
+                android:textColorHint="@color/appBackgroundColor"
+                app:boxBackgroundMode="outline"
+                app:boxStrokeColor="@color/appBackgroundColor"
+                app:boxStrokeErrorColor="@color/errorColor"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/colorPrimary"
+                app:hintTextColor="@color/colorPrimary"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />
+                app:layout_constraintTop_toBottomOf="@+id/etLoginEmail">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:textColor="@color/appBackgroundColor" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/btnLogin"
