--- a/app/src/main/res/layout-night/fragment_login.xml
+++ b/app/src/main/res/layout-night/fragment_login.xml
@@ -13,7 +13,6 @@
         android:text="@string/login"
         android:textColor="@color/colorPrimaryText"
         android:textSize="25sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,16 +50,16 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etLoginEmail"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_your_email"
+                android:textSize="20sp"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/colorPrimary"
                 app:errorEnabled="true"
-                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" >
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -71,18 +70,17 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etLoginPassword"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:hint="@string/enter_your_password"
+                android:textSize="20sp"
                 app:endIconMode="password_toggle"
                 app:endIconTint="@color/colorPrimary"
                 app:errorEnabled="true"
-                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" >
+                app:layout_constraintTop_toBottomOf="@+id/etLoginEmail">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
